# table-tennis

./: .bash_history  .bashrc  .dockerignore  .env.example  .gitconfig  .gitignore  .python_history  CLAUDE.md  Makefile  docker-compose.yaml  pyproject.toml
.ipython/profile_default/: history.sqlite
.ssh/: known_hosts
backend/: .env.example  API.md  CLAUDE.md  Dockerfile  analytics.py  api.py  app.py  clip_utils.py  db.py  logging.yaml  match_store.py  models.py  pyproject.toml  video_analysis.py
backend/src/: API.md  CLAUDE.md  api.py  app.py
backend/src/table_tennis_backend/: main.py
docker/: Dockerfile  docker-compose.yaml  env
documents/: design-documents.pptx  ~$design-documents.pptx
frontend/: CLAUDE.md  README.md  angular.json  docker-entrypoint.sh  package-lock.json  package.json
frontend/public/: env.js
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts  match-input-page.component.css  match-input-page.component.html  match-input-page.component.ts  match-timeline-panel.component.css  match-timeline-panel.component.html  match-timeline-panel.component.ts  match-video-panel.component.css  match-video-panel.component.html
frontend/src/app/shared/: models.ts  (+9 more)
frontend/src/styles/: ui.css
notebooks/: 00_video-clip.ipynb  01_add-bone.ipynb  02_extract_right_half.ipynb  03_extract_right_half.ipynb
postgres/scripts/: input_state.sql  insert_to_db.sh  matches.sql  migrate_points_from_sqlite.py  points.sql  seed_tag_definitions.sql
src/: video.py  youtube.py
(+205 files in other folders)
